<resources>
    <string name="app_name">ProfNotes</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- Strings related to login -->
    <string name="username">Номер телефона или логин</string>
    <string name="password">Пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Некорректное имя пользователя</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Вход не выполнен"</string>
    <string name="loginScreenHeader">ProfNotes</string>
    <string name="loginPageTitle">Вход</string>
    <string name="textUnderLoginFrame">Пожалуйста, войдите для продолжения</string>
    <string name="textUnderPasswordFrame">Или войдите без аккаунта, если не хотите пользоваться всеми возможностями</string>
    <string name="textPasswordRecovery">Не помните свой пароль? Восстановите пароль</string>
</resources>