<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:paddingLeft="@dimen/fragment_horizontal_margin"
    android:paddingTop="@dimen/fragment_vertical_margin"
    android:paddingRight="@dimen/fragment_horizontal_margin"
    android:paddingBottom="@dimen/fragment_vertical_margin"
    tools:context=".ui.login.LoginFragment">


    <TextView
        android:id="@+id/nameApp"
        style="@style/NameAppTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginScreenHeader"
        app:layout_constraintBottom_toTopOf="@id/loginContainer"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="36dp" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/loginContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            android:id="@+id/loginPageTitle"
            style="@style/PageTitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fragmentLoginContentMarginStart"
            android:layout_marginEnd="@dimen/fragmentLoginContentMarginStart"
            android:text="@string/loginPageTitle"
            tools:layout_editor_absoluteX="32dp" />

        <TextView
            android:id="@+id/textUnderLoginFrame"
            style="@style/PlaneTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fragmentLoginContentMarginStart"
            android:layout_marginEnd="@dimen/fragmentLoginContentMarginStart"
            android:text="@string/textUnderLoginFrame"
            android:textColor="@color/gray" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/fragmentLoginContentMarginStart"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="@dimen/fragmentLoginContentMarginStart"
            android:background="@drawable/edittext_rounded"
            android:fontFamily="@font/circe_bold"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="12dp"
            android:selectAllOnFocus="true"
            android:textColorHint="@color/gray"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/fragmentLoginContentMarginStart"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="@dimen/fragmentLoginContentMarginStart"
            android:background="@drawable/edittext_rounded"
            android:fontFamily="@font/circe_bold"
            android:hint="@string/password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="12dp"
            android:selectAllOnFocus="true"
            android:textColorHint="@color/gray"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textBelowPasswordFrame"
            style="@style/PlaneTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fragmentLoginContentMarginStart"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="@dimen/fragmentLoginContentMarginStart"
            android:text="@string/textUnderPasswordFrame"
            android:textColor="@color/gray"
            android:textColorLink="@color/green" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/loginButtonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="74dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textPasswordRecovery"
            style="@style/PlaneTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fragmentLoginContentMarginStart"
            android:layout_marginEnd="@dimen/fragmentLoginContentMarginStart"
            android:layout_marginBottom="12dp"
            android:text="@string/textPasswordRecovery"
            android:textColor="@color/gray"
            android:textColorLink="@color/yellow" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/fragmentLoginContentMarginStart"
            android:layout_marginEnd="@dimen/fragmentLoginContentMarginStart"
            android:backgroundTint="@color/yellow"
            android:enabled="false"
            android:fontFamily="@font/circe_bold"
            android:text="@string/action_sign_in"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>